Updated write up

--- a/index.qmd
+++ b/index.qmd
@@ -184,9 +184,9 @@ tempo_averages <- plot1b_data |>
 
 ### Discussion
 
-The faceted bar chart illustrates that average energy scores of Taylor Swift's singles on her albums are generally higher than the average energy scores of album-only songs. In fact, out of the `{r} nrow(plot1a_data)/2` albums analyzed, only `{r} nrow(plot1a_data_for_writeup)` albums have a lower average singles energy than average album-only-songs energy. Those albums are `{r} paste(plot1a_data_for_writeup$album_name, collapse = " and ")`. In fact, the difference between the average energy of singles and album-only songs was `{r} round(average_energy_single - average_energy_album, digits = 2)`, meaning that the average energy of singles was `{r} round(100*(average_energy_single - average_energy_album)/average_energy_album, digits = 2)` percent higher than the average energy of album-only songs.
+The faceted bar chart illustrates that average energy scores of Taylor Swift's singles on her albums are generally higher than the average energy scores of album-only songs. In fact, out of the `{r} nrow(plot1a_data)/2` albums analyzed, only `{r} nrow(plot1a_data_for_writeup)` albums have a lower average singles energy than average album-only-songs energy. Those albums are `{r} paste(plot1a_data_for_writeup$album_name, collapse = " and ")`. In fact, the difference between the average energy of singles and album-only songs was `{r} round(average_energy_single - average_energy_album, digits = 2)`, meaning that the average energy of singles was `{r} round(100*(average_energy_single - average_energy_album)/average_energy_album, digits = 2)` percent higher than the average energy of album-only songs. We speculate that the singles have higher energy since they are intended to grab the attention of the listeners, and typically are projected to be the songs most frequently played on the radio.
 
-The density ridgeline plot illustrates that the tempo of Taylor Swift's singles seem to be lower than the tempos of her album-only songs. This can be inferred from the fact that the plot for singles sits further to the left than the plot for the album-only songs. The plot for the singles is right-skewed, while the plot for the album-only songs is roughly symmetric. These observations made from looking at the plots are backed up by the data as well, as the average tempo for singles is `{r} round(tempo_averages$average_tempo[tempo_averages$is_single == TRUE], digits = 2)` and the average tempo for album-only songs is `{r} round(tempo_averages$average_tempo[tempo_averages$is_single == FALSE], digits = 2)`.
+The density ridgeline plot illustrates that the tempo of Taylor Swift's singles seem to be lower than the tempos of her album-only songs. This can be inferred from the fact that the plot for singles sits further to the left than the plot for the album-only songs. The plot for the singles is right-skewed, while the plot for the album-only songs is roughly symmetric. These observations made from looking at the plots are backed up by the data as well, as the average tempo for singles is `{r} round(tempo_averages$average_tempo[tempo_averages$is_single == TRUE], digits = 2)` and the average tempo for album-only songs is `{r} round(tempo_averages$average_tempo[tempo_averages$is_single == FALSE], digits = 2)`. We speculate that this is partially due to the fact that there are so many more songs in the album released category rather than the single released.
 
 ## **Question 2**: How have Taylor Swift's songs changed over time?
 
